--- a/Web3-JS/hello-web3-js/package.json
+++ b/Web3-JS/hello-web3-js/package.json
@@ -14,6 +14,7 @@
   "author": "Prathamesh Mutkure",
   "license": "MIT",
   "dependencies": {
-    "web3": "^1.7.1"
+    "web3": "^1.7.1",
+    "web3.js-browser": "^0.2.0"
   }
 }
